# semble

./: CITATION.cff  README.md  pyproject.toml
benchmarks/: README.md
src/semble/: __init__.py  cache.py  cli.py  mcp.py  search.py  stats.py  types.py  utils.py  version.py
src/semble/agents/: claude.md  cursor.md  gemini.md  kiro.md  opencode.md
src/semble/chunking/: core.py
src/semble/index/: create.py  files.py  index.py
tests/: test_cache.py  test_cli.py  test_files.py  test_index.py  test_mcp.py
